css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,600;1,200;1,400&family=Roboto:ital,wght@1,300&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

:root {
  --blck: #000;
  --white: #fff;
  --grn: cadetblue;
  --fade-blue: #6089d4;
  --cornblue: cornflowerblue;
  --color-light--1: #aaa;
  --clr-grey: #ebebeb;
  --color-dark--2: #42484d;
  --navy: #09094d;
  --padding-nav: .8rem 0;
  --padding-one: 1rem 0;
  --padding-btn: .8rem 1rem;
  --font-medium: 1rem;
  --fontWeigth: 600;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Montserrat', sans-serif;
}

/* navigation*/
header {
  position: -webkit-sticky;
  top: 0;
  background-color: var(--blck);
  z-index: 1000;
  width: 100%;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo a {
  font-size: 2rem;
  text-decoration: none;
  color: var(--white);
  font-weight: var(--fontWeigth);
}

.menu {
  width: 40px;
  height: 30px;
}

.nav_links {
  display: block;
  color: var(--white);
  padding: .5rem;
  transition: 400ms;
}

.nav_links:hover,
.nav_links:active {
  border: 1px solid var(--white);
  border-radius: 6px;
}

#register:hover, .logo a{
  border: 0 !important;
}

/* aout */
.head-section {
  text-align: center;
  padding: 1.5rem .7rem;
}

.head-section h1 {
  font-weight: var(--fontWeigth);
  font-size: 2rem;
}

.head-section p {
  padding: 1rem 0;
}

.container {
  margin: 0 auto;
  padding: 3rem 0;
}
 
/* intro */
#header {
  background-color: var(--blck);
  color: var(--white);
}

.image-hero img {
  max-width: 100%;
  width: 70%;
  height: 350px;
  border-top-left-radius: 40%;
  border-bottom-right-radius: 40%;
  display: block;
  margin: 0 auto;
  border: 10px solid var(--clr-grey);
}

.head-section button {
  width: 150px;
  padding: .6rem;
  border: 0;
  border-radius: 5px;
  background-color: var(--fade-blue);
  transition: 400ms ease-in;
  color: var(--white);
}

.head-section span {
  color: var(--fade-blue);
  transition: all ease-in;
  animation: change 2000ms ease-in infinite;
}

@keyframes change {
  0% {
    color: cornflowerblue;
  }

  25% {
    color: coral;

  }

  50% {
    color: #64edcb;

  }

  75% {
    color: var(--navy)
  }

  100% {
    color: #ed64c2;
  }
}

#btn-hero_two {
  background-color: transparent;
  border: 1px solid var(--white);
}

#btn-hero_two:hover {
  background-color: var(--fade-blue);
  border: none;
}

#btn-hero_one:hover {
  background-color: transparent;
  border: 1px solid var(--white);
}

.about {
  font-size: 2rem;
  font-weight: var(--fontWeigth);
}

.about strong {
  color: cadetblue;
}

/* services */
#services {
  min-height: 100vh;
  color: var(--blck);
}

#container {
  width: 90%;
  max-width: 1000px;
  margin: 2rem auto;
  padding: 1.5rem 1rem;
}

#browse {
  font-size: 2rem;
}

.card {
  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
  border-radius: 5px;
  max-width: 400px;
  padding: .3rem;
}

.card p {
  font-size: 17px;
  font-weight: 400;
  line-height: 20px;
  color: #666;
}

.card p.small {
  font-size: 14px;
}

.go-corner {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 32px;
  height: 32px;
  overflow: hidden;
  top: 0;
  right: 0;
  background-color: var(--fade-blue);
  border-radius: 0 4px 0 32px;
}

.go-arrow {
  margin-top: -4px;
  margin-right: -4px;
  color: var(--white);
}

.card1 {
  display: block;
  position: relative;
  background-color: #f2f8f9;
  border-radius: 4px;
  padding: 32px 24px;
  margin: 12px;
  text-decoration: none;
  z-index: 0;
  overflow: hidden;
}

.card1:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: -16px;
  right: -16px;
  background: var(--fade-blue);
  height: 32px;
  width: 32px;
  border-radius: 32px;
  transform: scale(1);
  transform-origin: 50% 50%;
  transition: transform 0.25s ease-out;
}

.card1:hover:before {
  transform: scale(21);
}

.card1:hover p {
  transition: all 0.3s ease-out;
  color: rgba(255, 255, 255, 0.8);
}

.card1 h3 {
  color: var(--color-dark--2);
}

.card1:hover h3 {
  transition: all 0.3s ease-out;
  color: var(--white);
  font-weight: var(--fontWeigth);
}

.jobs a {
  color: var(--cornblue);
}

.grid {
  padding: var(--padding-one);
}

.grid h3 {
  font-weight: var(--fontWeigth);
}

/* contact */
#contact {
  margin: 3rem auto;
}

/* faqs */
.questions {
  padding: var(--padding-btn);
  transition: 400ms ease-in;
}

.questions h4 {
  text-transform: capitalize;
  font-weight: var(--fontWeigth);
}

.questions p {
  padding: .6rem 0;
  transition: 400ms ease-in;
}

.faqimg {
  width: 25px;
  padding-right: .6rem;
  display: block;
  transition: 400ms ease-in;
}

.fieldset-img {
  transform: rotate(360deg);
}

#faqs h3 {
  font-weight: var(--fontWeigth);
  text-align: center;
  font-size: 2rem;
  text-transform: capitalize;
  padding-bottom: var(--font-medium);
}

fieldset {
  border: 2px solid var(--clr-grey);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* js class */
.hidden {
  display: none;
}

/* footer */
footer,
#copy {
  background-color: var(--blck) !important;
}

footer li {
  transition: 400ms ease-in;
}

footer a:hover {
  text-decoration: underline;
}

.flex {
  max-width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

#map {
  width: 100%;
  height: 100%;
  background-color: var(--color-light--1);
}

.form {
  background-color: var(--color-dark--2);
  padding: .8rem;
}

.form h3 {
  font-size: 3rem;
  text-align: center;
  color: var(--clr-grey);
  font-weight: var(--fontWeigth);
}

.form input,
.form button {
  display: block;
  width: 100%;
  margin: var(--padding-one);
  padding: var(--padding-btn);
}

#mapbtn {
  background-color: var(--cornblue);
  color: var(--white);
}

#mapbtn:hover {
  background-color: var(--fade-blue);
}

/* testimoi sectio */
#testimonials h3 {
  text-align: center;
  font-weight: var(--fontWeigth);
  font-size: 2rem;
  padding: var(--padding-btn);
}

.testimony-grid {
  margin: 2rem auto;
}

.cardWrapper {
  position: relative;
  width: 300px;
  height: 280px;
  padding: var(--padding-btn);
  background-color: var(--white);
  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
  border-radius: 5px;
  transition: 400ms ease-in;
  margin: 1rem auto;
}

.cardWrapper:hover {
  transform: scale(1.05);
}

.cardWrapper img {
  width: 20px;
}

.overlay {
  position: absolute;
  height: 100px;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: var(--fade-blue);
}

.overlay img {
  width: 40px;
  display: block;
  left: 50%;
  right: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  position: absolute;
  top: -1px;
  border: 5px solid var(--white)
}

.overlay h5 {
  font-weight: var(--fontWeigth);
  padding-top: 2rem;
}

.overlay h5,
.overlay p {
  color: var(--white);
  text-align: center;
}

@media only screen and (min-width: 600px) {

  .grid,
  .testimony-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
  }
}

@media only screen and (min-width: 912px) {
  header {
    height: 80px;
    background-color: var(--blck);
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .menu {
    display: none;
  }

  .nav-lists {
    display: flex;
    align-items: center;
  }

  .nav_links {
    display: block;
    font-size: 1.05rem;
    padding: 10px 25px;
  }

  .nav_list:nth-child(5) {
    background-color: var(--cornblue);
    padding: .5rem;
    border-radius: 5px;
  }

  .container {
    max-width: 1200 !important;
    width: 85%;
  }

  .about {
    font-size: 3rem;
  }

  .grid-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .image-hero img {
    height: 460px;
  }

  .head-section,
  .image-hero {
    text-align: left;
    width: 50%;
  }

  .head-section h1 {
    font-size: 3.5rem;
  }

  .head-section p {
    padding: 1.5rem 0;
  }

  .head-section button {
    font-size: var(--font-medium);
  }

  #container {
    max-width: 1100px;
    padding: 0;
  }

  #browse {
    font-size: 3.5rem;
  }

  .card {
    padding: 0;
  }

  .grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
  }

  .flex {
    flex-direction: row;
  }

  #map {
    width: 80%;
    background-color: var(--color-light--1);
  }

  .form {
    width: 40%;
    background-color: var(--color-dark--2);
    padding: .8rem;
  }

  .form form {
    margin-top: 3rem;
  }

}

@media only screen and (min-width:1024px) {
  #lists {
    flex-basis: 60%;
  }

  .testimony-grid {
    max-width: 1000px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  header {
    padding: 0 4rem;
  }

  .image-hero img {
    width: 85%;
  }
}

@media only screen and (max-width:912px) {
  header{
    padding: 0 30px;
  }
  .nav-bar {
    position: absolute;
    top: 50px;
    left: 0;
    right: 0;
    width: 100vw;
    height: 0;
    background-color: var(--blck);
    overflow: hidden;
    transition: 400ms;
  }

  .nav-lists {
    display: block;
    width: fit-content;
    margin: 80px auto;
    text-align: center;
    opacity: 0;
    transition: 500ms;
  }

  .nav-lists-active {
    opacity: 1;
  }

  .active {
    height: 450px;
  }
}

@media only screen and (min-width:768px) and (max-width:1000px){
  .grid-wrapper{
    width: 85%;
    margin:  0 auto;
  }
}

